[metadata]
name = starlink-grpc-core
url = https://github.com/sparky8512/starlink-grpc-tools
author_email = sparky8512-py@yahoo.com
license_files = ../LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
description = Core functions for Starlink gRPC communication
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    grpcio>=1.12.0
    protobuf>=3.6.0
    yagrc>=1.1.1
    typing-extensions>=4.3.0
package_dir =
    =..
py_modules =
    starlink_grpc
python_requires = >=3.7
